samples/_failures_safe/1761206300_27b61b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_416f1d63.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_416f1d63.c:114:29: error: expected ‘]’ at end of input
  114 |         if (mesh->vertices[i
      |                             ^
      |                             ]
./samples/SAFE/__tmp_416f1d63.c:114:13: error: used struct type value where scalar is required
  114 |         if (mesh->vertices[i
      |             ^~~~
./samples/SAFE/__tmp_416f1d63.c:114:9: error: expected declaration or statement at end of input
  114 |         if (mesh->vertices[i
      |         ^~
./samples/SAFE/__tmp_416f1d63.c:114:9: error: expected declaration or statement at end of input
